// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EzPageContent should render EzContentGroup content with horizontal styles 1`] = `
.recipe-2 {
  background: #f4f7f8;
  padding: 1.5rem;
}

.recipe-2 > *:not(:first-child) {
  margin-top: 3rem;
}

.recipe-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.recipe-0 > * {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.recipe-0 > *:not(:first-child) {
  margin-left: 1.5rem;
}

<div
  className="recipe-2 recipe-3"
>
  <div
    className="recipe-0 recipe-1"
  >
    <p>
      Lorem ipsum dolor
    </p>
    <p>
      Lorem ipsum dolor
    </p>
  </div>
</div>
`;

exports[`EzPageContent should render EzContentGroup with default styles 1`] = `
.recipe-2 {
  background: #f4f7f8;
  padding: 1.5rem;
}

.recipe-2 > *:not(:first-child) {
  margin-top: 3rem;
}

.recipe-0 > *:not(:first-child) {
  margin-top: 1.5rem;
}

<div
  className="recipe-2 recipe-3"
>
  <div
    className="recipe-0 recipe-1"
  >
    <p>
      Lorem ipsum dolor
    </p>
    <p>
      Lorem ipsum dolor
    </p>
  </div>
</div>
`;

exports[`EzPageContent should render with default styles 1`] = `
.recipe-0 {
  background: #f4f7f8;
  padding: 1.5rem;
}

.recipe-0 > *:not(:first-child) {
  margin-top: 3rem;
}

<div
  className="recipe-0 recipe-1"
>
  <p>
    Lorem ipsum dolor
  </p>
  <p>
    Lorem ipsum dolor
  </p>
</div>
`;
